# ImageVectorViaLayerDecomposition

Data/: ssim.py
Data/0-Test/: region_info.txt  resize.py
Data/1-Apple/: region_info.txt  resize.py
Data/1-Apple-QuantBlurSAM/: region_info.txt
Data/1-Apple-QuantBlurSAM/results/for_vectorize/0/: param.json
Data/1-Apple-QuantBlurSAM/results/for_vectorize/1/: param.json
Data/1-Apple-QuantBlurSAM/results/for_vectorize/2/: param.json
Data/1-Apple-QuantBlurSAM/results/for_vectorize/3/: param.json
Data/1-Apple-QuantBlurSAM/results/for_vectorize/4/: param.json
Data/1-Apple-QuantSAM/: region_info.txt
Data/1-Apple-QuantSAM/results/for_vectorize/0/: param.json
Data/1-Apple-QuantSAM/results/for_vectorize/1/: param.json
Data/1-Apple-QuantSAM/results/for_vectorize/2/: param.json
Data/1-Apple-SAM/: region_info.txt
Data/1-Syn1/: region_info.txt
Data/15-Cow/: region_info.txt
Data/15-Cow-BlurSAM/: region_info.txt
Data/15-Cow-QuantBlurSAM/: region_info.txt
Data/15-Cow-QuantSAM/: region_info.txt  resize.py
Data/15-Cow-SAM/: region_info.txt
Data/2-Dessert/: region_info.txt
Data/2-Orange/: region_info.txt
Data/20-Fish-SAM/: region_info.txt
Data/22-Peach-SAM/: region_info.txt  resize.py
Data/24-Tree/: region_info.txt
Data/24-Tree-QuantBlurSAM/: region_info.txt
Data/24-Tree-QuantSAM/: region_info.txt
Data/24-Tree-SAM/: region_info.txt
Data/3-FatDog/: region_info.txt
Data/3-Orange/: region_info.txt
Data/3-Orange-QuantBlurSAM/: region_info.txt
Data/3-Orange-QuantSAM/: region_info.txt
Data/3-Orange-SAM/: region_info.txt
Data/4-CarCompetition/: region_info.txt
Data/5-Sushi/: region_info.txt  resize.py
Data/7-FatDog/: region_info.txt  resize.py
Data/9-Dog/: region_info.txt
Gen_svg_script/: main.py
ImageVectorization/: CMakeLists.txt
ImageVectorization/ImageVectorization/: Graph.h  LayerMerging.h  LayerParameterOptimization.h  LayerVectorizing.h  Main.cpp  RegionSupportingTree.h
ImageVectorization/build-2/: CMakeCache.txt  Makefile  cmake_install.cmake
ImageVectorization/build-3/: CMakeCache.txt  ImageVectorization  Makefile  cmake_install.cmake
ImageVectorization/build-4/: CMakeCache.txt  ImageVectorization  Makefile  cmake_install.cmake
ProcessRegionSegImg/: CMakeLists.txt
ProcessRegionSegImg/ProcessRegionSegImg/: Main.cpp  RegionInfo.h
(+122 files in other folders)
